@@ -1,3 +1,7 @@
+2010-02-10  Juanma Barranquero  <lekktu@gmail.com>
+
+	* textmodes/artist.el (artist-mt): Fix typos in docstring.
+
 2010-02-10  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
 
 	* info.el (Info-bookmark-jump): Simplify.
